# PAOO

./: CMakeLists.txt  HouseDemo  main.cxx
Apartament/: CmakeLists.txt  apartament.cxx  apartament.h
House/: house.cxx
Residence/: CMakeLists.txt  residence.cpp  residence.h
StudioApartament/: CmakeLists.txt  studioApartament.cxx  studioApartament.h
house/: CMakeLists.txt  house.cpp  house.cxx  house.h
renovationTeam/: CmakeLists.txt  renovationTeam.cxx  renovationTeam.h
